Elevate header one level when sticky to avoid conflicts in z-index.

--- a/source/sass/component/_header.scss
+++ b/source/sass/component/_header.scss
@@ -1,5 +1,5 @@
 .c-header {
-    z-index: $level-7;
+    z-index: $level-6;
     position: relative;
     background-color: $color-header-background;
 
